# SDKSizeHelper

./: README.md  build.sh  compare.py
dummylib/: CMakeLists.txt  dummy.mm
testProj/testProj/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m
testProj/testProj.xcodeproj/: project.pbxproj
testProj/testProj/Test.framework/: Test
testProj/testProj/Test.framework/Headers/: Test.h
testProj/testProj/Test.framework/Modules/: module.modulemap
